# proc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lib.ring  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  ubuntu_build.yml  windows_build.yml
examples/: example1.ring  example2.ring  example3.ring  example4.ring  example5.ring  example6.ring
lib/macos/amd64/: libring_proc.dylib
lib/macos/arm64/: libring_proc.dylib
src/: proc.rh  proc.ring
src/c_src/: ring_proc.c
src/utils/: install.ring  uninstall.ring
